fix alignment and add colour to heading

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -45,6 +45,7 @@
 
 .profile h3 {
   font-size: 15px;
+  color: chartreuse;
 }
 
 .buttonsRow {
